Changelog
=========

0.5 (unreleased)
----------------

- Fix rst markup in documentation formatting [khink]

0.4 (2011-04-12)
----------------

- Add a view for one single faq (no more the default view)


0.3 (2011-03-09)
----------------

- Add English in locales
- Add index view
- Change template for AnySurfer compliant
- Created recipe with ZopeSkel
  [Benoit Suttor - CIRB/CIBG]