@@ -8,3 +8,13 @@ content types "FAQ Item", "FAQ Folder" and "FAQ group". It defines two views
 for the "FAQ folder" type. For all content types, you can set a content
 object's language using the "Language" field. 
 
+Features:
+
+- two views for a FAQ Folder:
+
+  * `index_view` shows links to FAQ Items in the FAQ Folder
+  * `all_view` shows FAQ Items and their answers on one page
+
+- a portlet for showing most recent FAQ items
+- a viewlet on FAQ Items to say whether the information was useful or not
+- a viewlet on FAQ Items which displays a link to the contact form
