@@ -1,5 +1,11 @@
 var linguafaq = {
 
+    expandForm: function() {
+        $('#useful input:radio[value="0"]').click(function() {
+            jq(this).parent().find(".comments").fadeIn();
+        }); 
+    },
+
     expandFaqItemAnswer: function() {
         $('a.faqItemLink').prepOverlay({
             subtype: 'ajax',
@@ -10,5 +16,6 @@ var linguafaq = {
 
 jq(document).ready(function() {
     linguafaq.expandFaqItemAnswer();
+    linguafaq.expandForm();
 });
 
