@@ -4,7 +4,11 @@ Changelog
 0.5 (unreleased)
 ----------------
 
-- Fix rst markup in documentation formatting [khink]
+- Fix rst markup in documentation formatting
+- Add portlet
+- Add viewlet to link to contact form
+- Show "related items" in `onefaqview`.
+- Add Event to use in Content Rule (for sending mail when vote is added).
 
 0.4 (2011-04-12)
 ----------------
